# AsteraClient-Full-Deobf-Source

./: README.md  build.gradle  gradle.properties
songdetector/: CMakeLists.txt  SongDetector.cpp  SongDetector.h
src/main/java/me/lyrica/: Lyrica.java
src/main/java/me/lyrica/api/cache/: Cache.java
src/main/java/me/lyrica/commands/: Command.java  CommandManager.java  RegisterCommand.java
src/main/java/me/lyrica/commands/impl/: AICommand.java  BindCommand.java  ChatNotifyCommand.java  ConfigCommand.java  DrawnCommand.java  FolderCommand.java  FriendCommand.java  GrabCommand.java  HelpCommand.java  MacroCommand.java  ModuleCommand.java  ModulesCommand.java  PrefixCommand.java  SayCommand.java  ToggleCommand.java  WaypointCommand.java
src/main/java/me/lyrica/events/: Event.java  EventHandler.java  Listener.java  SubscribeEvent.java
src/main/java/me/lyrica/gui/: ClickGuiScreen.java
src/main/java/me/lyrica/managers/: ChatManager.java  ConfigManager.java  FontManager.java  FriendManager.java  MacroManager.java  PositionManager.java  RenderManager.java  RotationManager.java  ServerManager.java  ShaderManager.java  SoundManager.java  TargetManager.java  TaskManager.java  WaypointManager.java  WorldManager.java
src/main/java/me/lyrica/modules/: Module.java  ModuleManager.java  RegisterModule.java
src/main/java/me/lyrica/settings/: Setting.java
src/main/java/me/lyrica/utils/: IMinecraft.java
src/main/resources/: fabric.mod.json  lyrica.accesswidener  lyrica.mixins.json
src/main/resources/assets/lyrica/post_effect/: outline.json
(+198 files in other folders)
